--- a/Survey Form/styles.css
+++ b/Survey Form/styles.css
@@ -1,5 +1,8 @@
 /* Importing the Mesozoic font */
 @import url('https://fonts.googleapis.com/css2?family=Skranji&display=swap');
+*{
+    box-sizing: border-box;
+}
 
 body {
     padding: none;
